# python-project-52

./: .env.example  .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: check_task_manager.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py
task_manager/auth/: apps.py  tests.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_status_taskstatus.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/utils/: misc.py  test_crud.py
task_manager/views/: __init__.py  auth.py
templates/: base.html  home.html
templates/auth/: login.html
templates/components/: footer.html  navbar.html  simple_form.html
templates/labels/: create.html  delete.html  list.html  update.html
templates/statuses/: create.html  delete.html  list.html  update.html
templates/tasks/: card.html  create.html  delete.html  list.html  update.html
templates/users/: create.html  delete.html  list.html  update.html
