[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["Anton Sidorenkov"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
python-dotenv = "^0.21.0"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.3"
psycopg2 = { version = "^2.9.5", optional = true }
psycopg2-binary = { version = "^2.9.5", optional = true }
pydantic = "^1.10.2"
django-filter = "^22.1"
rollbar = "^0.16.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
faker = "^15.3.4"
coverage = "^7.0.0"

[tool.poetry.extras]
psycopg2 = ["psycopg2"]
psycopg2-binary = ["psycopg2-binary"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
